# plugin-feature-Pomodoro

./: CMakeLists.txt  LICENSE  Pomodoro.cpp  Pomodoro.h  Pomodoro_global.h  azure-pipelines.yml  qml.qrc
qml/: Clock.qml  Pomodoro.qml  SelectInterval.qml
